testsuite/tests/properties/invalid_final/overriding_final_1.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ConcreteNode(@Example)
}

@abstract class FooNode implements Node[FooNode] {
}

@abstract class AbstractNode : FooNode {
    @exported @final fun f(): Int = 0
}

class ConcreteNode : AbstractNode implements TokenNode {
    fun f(): Int = 1
}
